styles.css
#main{
    font-family: Helvetica;
    font-size: 60px;
    font-weight: lighter;
    text-align: center;
}

body{
    background-color: #FFFDE7;
}

.navigation-links{
    font-family: Helvetica;
    font-size: larger;
    text-align: center;
}

#location{
    font-size: 40px;
    text-align: center;
    margin-top: -40px;
    font-family: Georgia;
    text-decoration: overline;
}

#about{
    font-family: Helvetica;
    font-size: 60px;
    font-weight: lighter;
    text-align: center;
}

p{
    font-size: 25px;
    font-family: Helvetica;
    text-align: center;
}

li{
    font-size: 20px;
    text-align: center;
    list-style-type: none;
}

button{
    cursor: pointer;
    background-color:  #FFFDE7;
    font-size: 25px;
    margin: 5px;
    margin-bottom: 20px;
    margin-top: -10px;
}

button:hover{
    background-color: aliceblue;
}

#background-index{
    object-fit: cover;
    width: 1500px;
    height: 500px;
    
}

